--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ html {
     background-color: rgb(109, 35, 35);
     background-image:url(../images/Background.jpeg);
     background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 body {
