--- a/qrcode/qrcode.css
+++ b/qrcode/qrcode.css
@@ -1,73 +1,40 @@
-/* html {
+html {
     background-color: rgb(109, 35, 35);
     background-image:url(../images/Background.jpeg);
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-} */
+    background-attachment: fixed;
+}
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    margin: 0;
-    background-color: #f0f0f0;
-}
-
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
-
-.main {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    padding-top: 30%;
+    position: relative;
     min-height: 100vh;
 }
 
-.main .box {
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 20px;
-    color: #1e7fb0;
-    box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-}
-
-.main .box hr {
-    border-top: 2px solid #a2a2a2;
-    margin: 3px;
-}
-
-.main .box input {
-    width: 100%;
-    margin-bottom: 3px;
-    height: 50px;
-    padding: 3px;
-    resize: vertical;
-}
-
-.main .box .qrcode {
-    padding: 3px;
-}
-
-.main .box .sqrcode {  
-    padding: 3px;
-    margin-left: 15px;
-}
-
-.main .box button {
-    width: 100%;
-    height: 35px;
-    background-color: #1e7fb0;
-    font-weight: 700;
-    font-family: 'Unbutu', sans-serif;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 footer {
-    color: whitesmoke;
+    color: #fff;
+    padding: 60px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 200px;
+}
+
+.content-container {
+    padding: 20px;
 }
 
 /* NAVBAR */
@@ -170,45 +137,43 @@ header.active .translate:hover {
     background-color: #151515;
 }
 
-/* QR Code */
+/* QR Code Generator */
 
-.app-container {
-    text-align: center;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-}
-
-.app-title {
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.input-container {
-    margin-bottom: 20px;
+.qr_code_gene {
+    background-color: #e3e3e3;
+    width: 350px;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    transition: box-shadow 0.3s;
+    margin-bottom: 20px;
 }
 
-.input-label {
+.qr_code_gene:hover {
+    transition: box-shadow 0.4s;
+    box-shadow: 0 0 20px rgba(255,255,255,0.3);
+}
+
+label {
+    padding-bottom: 10px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+input {
+    width: 308px;
     font-size: 16px;
-    color: #555;
-    width: 80px;
+    padding: 5px;
+    margin-bottom: 25px;
 }
 
-.input-field {
-    flex: 1;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-}
-
-.gr-image {
-    max-width: 100%;
-    height: auto;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+.qr_code {
+    padding: 25px;
+    width: fit-content;
+    display: none;
 }
